# caffe_cmake_tutorial

./: CMakeLists.txt  README.md  bindb.cpp  ex_blob.cpp  ex_dataset.cpp  ex_layer.cpp  ex_math.cpp  logreg_test.cpp  logreg_train.cpp  main.cpp  readMnistImage.cpp  testTrainedMnist.cpp  test_caffe_manual.cpp
AgeAndGenderEstimation-master/: CMakeLists.txt  main.cpp
AgeAndGenderEstimation-master/AgeEstimationModule/: age_estimation.hpp
AgeAndGenderEstimation-master/FaceDetectionModule/: face_detection.hpp
AgeAndGenderEstimation-master/GenderEstimationModule/: gender_estimation.hpp
AgeAndGenderEstimation-master/Utils/: data_transformer.hpp
caffe_examples/shape/: CMakeLists.txt  classify-shape.cpp  classify.sh  deploy.prototxt  generate.sh  generate_random_shape_training_data.cpp  solver.prototxt  train.sh  train_test.prototxt
cnn_age_gender/: CMakeLists.txt  Classifier.cpp  Classifier.h  age_estimation.cpp  age_gender_estimator.cpp  age_label.txt  gender_label.txt  main.cpp
cnn_age_gender/age_estimation/: age_estimation.cpp  age_gender_estimator.hpp
cnn_age_gender/face_detection/: face_detection.cpp  face_detection.hpp
cnn_age_gender/gender_estimation/: gender_estimation.cpp  gender_estimation.hpp
cnn_age_gender/utils/: BoundingBox.cpp  BoundingBox.hpp  data_transformer.cpp  data_transformer.hpp  tool_box.cpp  tool_box.hpp
